# mapnet

./: .gitignore  Pipfile  pyproject.toml  setup.py
mapnet/: __init__.py
scripts/: aggregate_mondo_mesh_predictions.py  aggregated_mondo_mesh_predictions.sssom.tsv  generate_leonmap_mondo_mesh_mapping.py
scripts/leonmap_mondo_mesh_classified/: leonmap_mondo_mesh_novel.sssom.tsv  leonmap_mondo_mesh_right.sssom.tsv  leonmap_mondo_mesh_wrong.sssom.tsv
