[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapnet"
dynamic = ["version"]
dependencies = [
    "jpype1",
    "polars",
    "torch",
    "torchvision",
    "torchaudio",
    "deeponto",
    "biomappings",
    "bioregistry",
    "black",
    "indra",
    "pyobo",
    "transformers[torch]==4.40.0"
]
requires-python = ">=3.10,<3.11"

description = "Algorithms for semantic mappings between different ontologies."
readme = "README.md"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/gyorilab/mapnet"
Repository = "https://github.com/gyorilab/mapnet.git"
"Bug Tracker" = "https://github.com/gyorilab/mapnet/issues"

[tool.setuptools.dynamic]
version = {attr = "mapnet.__version__"}
